--- a/_includes/title.html
+++ b/_includes/title.html
@@ -5,14 +5,14 @@
     {% endunless %}
 
     {% unless site.stackoverflow == "" %}
-      <a id="so-ic" href="{{site.stackoverflow}}"><i class="fa fa-stack-overflow"></i></a>
+      <a id="so-ic" href="{{site.twitter}}"><i class="fa fa-twitter"></i></a>
     {% endunless %}
 		
-    <a id="sitename" href="{{site.baseurl}}">username.github.io</a>
+    <a id="sitename" href="{{site.baseurl}}">Yumna Aziz Ansari</a>
   </h1>
 
   <!-- Add something about you in p tag-->
-  <p>Write something about you here...</p>
+  <p>Dreamer. Programmer. Wannabe Game Dev. ISTP.</p>
   <hr/>
   
   {% include nav-links.html %} 
