--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
 
   <div class="wrapper">
 
-    <a class="title-site" href="{{ site.baseurl }}/">{{ site.title }}</a>
+  <div class="me"> <img src="/images/me.jpg" width="100" height="100"> </div> <a class="title-site" href="{{ site.baseurl }}/">{{ site.title }}</a>
 
     <nav class="site-nav">
       <a href="#" class="menu-icon">
