--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -17,8 +17,9 @@ body {
     font: $base-font-weight #{$base-font-size}/#{$base-line-height} $base-font-family;
     color: $text-color;
     background-color: $background-color;
-    background-image: url(svg/bg2.svg);
-    background-size: cover;
+    background-image: url(svg/bg.svg);
+
+    background-size:cover;
     -webkit-text-size-adjust: 100%;
     -webkit-font-feature-settings: "kern" 1;
     -moz-font-feature-settings: "kern" 1;
