--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -18,7 +18,7 @@ body {
     color: $text-color;
     background-color: $background-color;
     background-image: url(svg/bg.svg);
-
+    background-position: center;
     background-size:cover;
     -webkit-text-size-adjust: 100%;
     -webkit-font-feature-settings: "kern" 1;
