--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -57,6 +57,24 @@
 	}
 }
 
+button
+{
+	color: black;
+	border-radius: 20px;
+	background-image: url("svg/button.svg");
+	background-size: cover;
+	font-size: 30px;
+}
+
+.day
+{
+	text-align: center;
+
+
+	font-family: fantasy;
+	font-size: 30px;
+}
+
 @font-face {
 	font-family: Raven;
 	src: url(fonts/raven.ttf);
