Add project three

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,6 +10,7 @@
   <!-- <link rel="stylesheet" href="/css/style.css"> -->
   <script type="text/javascript"></script>
   <script src="/js/projecttwo.js"></script>
+  <script src="/js/projectthree.js"></script>
 
   <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
 
