Update hover link color

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -102,7 +102,7 @@ a {
     }
 
     &:hover {
-        color: $text-color;
+        color: $hover-color;
         text-decoration: underline;
     }
 }
