--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -119,6 +119,11 @@
 	border-style: dashed;
 }
 
+.blog
+{
+ 	font-family: serif;
+}
+
 @font-face {
 	font-family: HomemadeApples;
 	src: url(fonts/homeapples.ttf);
