--- a/css/main.scss
+++ b/css/main.scss
@@ -15,6 +15,7 @@ $base-line-height: 1.5;
 $spacing-unit:     30px;
 
 $text-color:       #111;
+$hover-color:     yellow;
 $background-color: #fdfdf;
 $brand-color:      #2a7ae2;
 
